# KindleClipRS

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  testclippings.txt
.github/workflows/: release.yml
src/: main.rs
templates/: clipping_template.md  quote_template.md
tests/: test_clippings.txt
