[package]
name = "kindlecliprs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.0"
chrono = "0.4.24"
env_logger = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.19"
regex = "1.8.3"
strum = "0.24.1"
strum_macros = "0.24.3"
